2005-10-21  Tom Tromey  <tromey@redhat.com>

	* model/invoke.hh (model_invocation_base::method_conversion_p):
	Declare.
	(model_generic_invocation::method_conversion_p): Likewise.
	(model_generic_invocation::resolved_params): New field.
	(model_generic_invocation::resolve): Declare.
	* model/invoke.cc (method_conversion_p): New methods.
	(try_method_conversion): Use it.
	(model_generic_invocation): New method.

2005-10-19  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* dump.cc (pretty_printer::print_method): Do not descend into
	the return type of the method, just print the pretty name.
	(pretty_printer::visit_forwarding_type): Do not descend into
	RES_TYPE, just print the pretty name.
	(pretty_printer::visit_forwarding_resolved): Likewise.

2005-10-18  Tom Tromey  <tromey@redhat.com>

	* model/method.cc (model_method): Set body,
	is_instance_initializer.

2005-10-18  Tom Tromey  <tromey@redhat.com>

	* model/classinst.hh (model_class_instance::type_map_match_p):
	Removed.
	* model/method.cc (apply_type_map): Updated.
	* model/method.hh (model_method::instance_cache): New field.
	* model/class.cc (create_instance): Updated.
	* model/class.hh (model_class::instances): Removed.
	(model_class::instance_cache): New field.
	* model/parameters.cc (find_instance): New method.
	(add_instance): Likewise.
	* model/parameters.hh (class model_instance_cache): New class.

	* model/class.cc (create_type_map): Removed.
	(create_instance): Updated.
	* model/parameters.hh (model_parameters::create_type_map):
	Declare.
	* model/parameters.cc (create_type_map): New method.
	* model/class.hh (model_class::create_instance): Updated
	documentation.
	(model_class::create_type_map): Removed.
	* model/method.hh (model_method::do_method_conversion_p):
	Declare.
	(model_method::method_conversion_p): Likewise.
	* model/method.cc (do_method_conversion_p): New methods.
	(method_conversion_p): Use it.  Return a method.
	(method_conversion_p): New overload.
